[gd_scene load_steps=2 format=3 uid="uid://music_player_panel_001"]

[ext_resource type="Script" path="res://scripts/music_player_panel.gd" id="1"]

[node name="MusicPlayerPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "🎵 音乐播放器"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "关闭"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="切换音乐" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/切换音乐"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/切换音乐/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/切换音乐"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UploadButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/切换音乐/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "上传音乐"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/切换音乐/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "删除选中"

[node name="音量调节" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/音量调节"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="BGMVolume" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/BGMVolume"]
layout_mode = 2
text = "背景音乐音量"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/BGMVolume"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/BGMVolume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 50.0

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/BGMVolume/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="AmbientVolume" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/AmbientVolume"]
layout_mode = 2
text = "环境音音量"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/AmbientVolume"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/AmbientVolume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 50.0

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/音量调节/VBoxContainer/AmbientVolume/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "50%"
horizontal_alignment = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "选择音频文件"
size = Vector2i(800, 600)
ok_button_text = "打开"
file_mode = 1
access = 2
